--- a/src/fsm-editor-page/fsm-editor-page.css
+++ b/src/fsm-editor-page/fsm-editor-page.css
@@ -1,14 +1,23 @@
-main {
-    /* display: flex; */
-    /* align-items: stretch; */
-    /* align-content: stretch; */
-    /* display: flex; */
-    /* flex-direction: column; */
-    height: 100%;
-}
-
 .d3-component {
     border: 1px solid var(--primary-color);
     width: 100%;
     height: 800px;
+}
+
+.d3-component path.link {
+    fill: none;
+    stroke: #666;
+    stroke-width: 50px;
+}
+
+.d3-component  circle {
+    fill: #ccc;
+    stroke: #fff;
+    stroke-width: 40px;
+}
+
+.d3-component text {
+    fill: #000;
+    font: 30px sans-serif;
+    pointer-events: none;
 }
