feat: Complete initial development
* Update readme with screenshots
* Fix bug with D3 not clearing visualization on edit
* Fix bug where new states don't show up in the new transition select box

--- a/src/fsm-editor-page/fsm-editor-page.css
+++ b/src/fsm-editor-page/fsm-editor-page.css
@@ -41,7 +41,7 @@ input, select {
     -webkit-appearance: none;
 }
 
-input:focus {
+input:focus, select:focus {
     border-color: var(--accent-color);
     outline: none;
 }
